# big_integer

./: .gitignore  CMakeLists.txt  README.md  big_int.tets  big_integer.cpp  big_integer.h  main.cpp  test
lib/: big_int.tets1  big_integer.cpp  big_integer.h  mult_string_err.txt  v2_err_mult.txt
tests/: CMakeLists.txt  test-main.cpp
unit_tests/: CMakeLists.txt  test-main.cpp
